stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c:18:25: error: conflicting types for 'CircularBuffer_Create'; have 'struct CircularBuffer *(size_t,  int)' {aka 'struct CircularBuffer *(long unsigned int,  int)'}
   18 | struct CircularBuffer * CircularBuffer_Create(size_t capacity, int default_value)
      |                         ^~~~~~~~~~~~~~~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
